--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Ember Starter Kit</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Ember Starter Kit</title>
+    <link rel="stylesheet" href="components/todomvc-common/base.css">
 </head>
 <body>
 
-  <script type="text/x-handlebars">
+<script type="text/x-handlebars">
     <h2>Welcome to Ember.js</h2>
 
     {{outlet}}
-  </script>
+</script>
 
-  <script type="text/x-handlebars" data-template-name="index">
+<script type="text/x-handlebars" data-template-name="index">
     <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
+        {{#each item in model}}
+        <li>{{item}}</li>
+        {{/each}}
     </ul>
-  </script>
+</script>
 
-  <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.2.js"></script>
-  <script src="js/app.js"></script>
+<script src="js/libs/jquery-1.9.1.js"></script>
+<script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
+<script src="js/libs/ember-1.0.0-rc.2.js"></script>
+
+<script src="js/libs/ember-data.js"></script>
+<script src="components/ember-localstorage-adapter/localstorage_adapter.js"></script>
+
+<script src="js/app.js"></script>
+<script src="js/router.js"></script>
+<script src="js/models/todo.js"></script>
+<script src="js/models/store.js"></script>
+<script src="js/controllers/todos_controller.js"></script>
+<script src="js/controllers/todo_controller.js"></script>
+<script src="js/views/edit_todo_view.js"></script>
 
 </body>
 </html>
