--- a/index1.html
+++ b/index1.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="components/todomvc-common/base.css">
 </head>
 <body>
-<script type="text/x-handlebars" data-template-name="todos">
-    {{outlet}}
-</script>
-<script type="text/x-handlebars" data-template-name="todos/index">
+<script type="text/x-handlebars" data-template-name="index">
     <section id="todoapp">
         <header id="header">
             <h1>todos</h1>
@@ -22,18 +19,24 @@
             <input id="toggle-all" type="checkbox">
             <label for="toggle-all">Mark all as complete</label>
             <ul id="todo-list">
-                {{#each model itemController="todo"}}
-                <li {{bindAttr class="isCompleted:completed"}}>
+                <!-- These are here just to show the structure of the list items -->
+                <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
+                <li class="completed">
                     <div class="view">
-                        {{view Ember.Checkbox checkedBinding="isCompleted" class="toggle"}}
-                        <label>{{title}}</label>
-                        <button class="destroy" {{action deleteAction}}></button>
+                        <input class="toggle" type="checkbox" checked>
+                        <label>Create a TodoMVC template</label>
+                        <button class="destroy"></button>
                     </div>
                     <input class="edit" value="Create a TodoMVC template">
                 </li>
-                {{/each}}
-                <!-- These are here just to show the structure of the list items -->
-                <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
+                <li>
+                    <div class="view">
+                        <input class="toggle" type="checkbox">
+                        <label>Rule the web</label>
+                        <button class="destroy"></button>
+                    </div>
+                    <input class="edit" value="Rule the web">
+                </li>
             </ul>
         </section>
         <!-- This footer should hidden by default and shown when there are todos -->
@@ -80,7 +83,8 @@
 <script src="js/models/todo.js"></script>
 <script src="js/models/store.js"></script>
 <script src="js/controllers/todos.js"></script>
-<script src="js/controllers/todo.js"></script>
+<!--<script src="js/controllers/todo_controller.js"></script>-->
+
 
 </body>
 </html>
